# rust-graphql-kata-001

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  sqlx-data.json
.github/workflows/: deploy.yaml  tests.yaml
migrations/: 20210710115018_initial.sql
rust-actix-web-template-web/: Cargo.toml
rust-actix-web-template-web/src/: lib.rs  main.rs  tracing.rs
rust-actix-web-template-web/src/routes/: health.rs
rust-actix-web-template-web/tests/: health.rs
rust-actix-web-template-web/tests/test_server/: mod.rs
rust-graphql-kata-001-web/: Cargo.toml
rust-graphql-kata-001-web/src/: configuration.rs  database.rs  domain.rs  graphql.rs  lib.rs  main.rs  startup.rs  tracing.rs
rust-graphql-kata-001-web/src/database/: forum.rs  mod.rs  reply.rs  session.rs  thread.rs  user.rs
rust-graphql-kata-001-web/src/graphql/: forum.rs  mod.rs  mutation.rs  query.rs  reply.rs  session.rs  thread.rs  user.rs
rust-graphql-kata-001-web/src/routes/: graphql.rs  health.rs
rust-graphql-kata-001-web/tests/test_server/: mod.rs
