[package]
name = "rust-graphql-kata-001-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
async-graphql = "2.9.7"
base64 = "0.13.0"
config = "0.11.0"
serde = "1.0.126"
sqlx = { version = "0.5.5", features = ["macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "time"] }
time = "0.2.27"
tracing = "0.1.26"
tracing-bunyan-formatter = "0.2.4"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = "1.8.1"
